--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,30 @@
 {% extends 'base.html'%}
 
 {% block contenido  %}
- <h3>
-   Hola tu email es {{correo}}
- </h3>
- <h4>
-  Tu contraseña es {{password}}
- </h4>
+<figure class="text-center">
+  <blockquote class="blockquote">
+    <p></p>
+    <p>HABILIDADES GENERALES</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+   </cite>
+  </figcaption>
+</figure>
+<ul class="list-unstyled">
+  <li></li>
+  <li>HABILIDADES:
+    <ul>
+      <li>SOY BAILARIN DESDE LOS 8 AÑOS</li>
+      <li>SE TOCAR UN PAR DE INSTRUMENTOS NO AL CIEN POR CIENTO PERO SI LO BASICO</li>
+      <li>SE NADAR ALREDEDOR DE 10 MN</li>
+      <li>ME PASE BATMAN ARKHAM CITY DOS VECES</li>
+    </ul>
+  </li>
+</ul>
 
+ 
 
 {% endblock%}
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
