--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,29 +1,22 @@
 {% extends 'base.html'%}
-
 {% block titulo %}
-Ingresar
+PORTAFOLIO
 {% endblock %}
-
-{% block contenido %}
-<div class="col col-md-4"></div>
-<div class="col col-md-4">
-    <form action="/" method="post">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-</div>
-
-<div class="col col-md-4"></div>
+  {% block contenido %}
+  
+<figure>
+  <blockquote class="text-center">
+    <p>HOLA BIENVENIDO A MI PORTAFOLIO PERSONAL.</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    ELIGE LA OPICION QUE MAS DESEES:</cite>
+  <br> 
+    <a href="{{ url_for('habilidades') }}">VER MIS HABILIDADES</a>
+    <br>
+    <a href="{{ url_for('datos') }}" >  DATOS PERSONALES</a>
+  </figcaption>
+</figure>
 {% endblock %}
+</body>
+
+</html>
