--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -3,7 +3,6 @@
 PORTAFOLIO
 {% endblock %}
   {% block contenido %}
-  
 <figure>
   <blockquote class="text-center">
     <p>HOLA BIENVENIDO A MI PORTAFOLIO PERSONAL.</p>
@@ -14,6 +13,9 @@ PORTAFOLIO
     <a href="{{ url_for('habilidades') }}">VER MIS HABILIDADES</a>
     <br>
     <a href="{{ url_for('datos') }}" >  DATOS PERSONALES</a>
+    <br>
+    <a href="{{ url_for('contacto') }}"> DEJAR DATOS PARA CONTACTAR</a>
+    <br>
   </figcaption>
 </figure>
 {% endblock %}
