--- a/templates/register.html
+++ b/templates/register.html
@@ -6,11 +6,11 @@
             <div class="card shadow w-50">
                 <div class="card-body">
                     <form action="/login" method="post">
-                        <h3 class="text-center"> BLOG DARK SOULS</h3>
+                        <h3 class="text-center"> REGISTRO DE ALMAS</h3>
                         <h5 class="text-center">
-                            INGRESA
+                            INGRESAR
                         </h5>
-                        <label for="">Usuario</label>
+                        <label for="">USERNAME</label>
                         <input type="email" class="form-control mb-3" name="email">
                         <label for="">Contraseña</label>
                         <input type="password" class="form-control mb-3" name="password">
