--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,28 @@
 {% extends 'layout.html'%}
 {% block titulo %}HOME{% endblock %}
 {% block body %}
-    <h1>Bienvenido a la página principal</h1>
+
+
+<div style="text-align: center;">
+<h1>BIENVENDIOS A UN BLOG ACERCA DE </h1>
+    <img src="https://th.bing.com/th/id/R.bb38df3b51d4e54d00f7d789d1dbed3a?rik=qb07mNl2RUvhpg&pid=ImgRaw&r=0" class="img-fluid" alt="..." height="300" width="600">
+
+</div class= "contenedor">
+<figure class="text-left">
+    <blockquote class="blockquote">
+
+        <div style="text-align: center;">
+            <img src="https://th.bing.com/th/id/R.44510ea89b647f9ac0461ce65473ea91?rik=r0PlnC%2brW73u7g&pid=ImgRaw&r=0" style="float: right; height: 300px; ; width: 400px;">
+        </div>    
+            <p>Datos del creador:</p>
+      <ul>
+        <li>Nombre: Hidetaka Miyazaki</li>
+        <li>Edad:49 años</li>
+        <li>Nacionalidad: japones</li>
+          </div>
+       <li>
+        Biografia: Hidetaka Miyazaki, nacido en Shizuoka, Prefectura de Shizuoka, Japón​ es un diseñador de videojuegos japonés y actual presidente de la compañía de videojuegos FromSoftware.2​ Miyazaki empezó a trabajar en FromSoftware como programador en el 2004, y después de trabajar en la saga Armored Core, se hizo conocido por crear la franquicia Souls. Aunque Miyazaki ha dirigido el primer y tercer videojuego de la serie, decidió tomar un papel menos activo en el desarrollo de Dark Souls II, supervisando el proyecto mientras Tomohiro Shibuya y Yui Tanimura se encargaron de la codirección.
+       </li>   
+
+</div>
 {% endblock %}
