--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,10 +18,12 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2 text-secondary">INICIO</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">HABILIDADES</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">PROYECTOS</a></li>
-            <li><a href="#" class="nav-link px-2 text-white">DATOS PERSONALES</a></li>
+                <a href="/register">
+                    <button type="button" class="btn btn-outline-light me-2" href="register.html">REGISTRO</button>
+                </a>
+            <li><a href="#" class="nav-link px-2 text-white">LORE DARK SOULS 1</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">LORE DARK SOULS 2</a></li>
+            <li><a href="#" class="nav-link px-2 text-white">LORE DARK SOULS 3</a></li>
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -31,9 +33,6 @@
             <div class="text-end">
                 <a href="/">
                     <button type="button" class="btn btn-outline-light me-2" href="login.html">SALIR</button>
-                </a>
-                <a href="https://onlyfans.com">
-                    <button type="button" class="btn btn-warning">INICIAR SESION</button>
                 </a>
             </div>
         </div>
