--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,9 +1,10 @@
-{% extends 'layout.html'%}
-{% block titulo %}HOME{% endblock %}
-{% block body %}
+
+
 
 
 <div style="text-align: center;">
+    <a class="btn btn-danger" href="/" role="button">Salir</a>
+       <a class="btn btn-outline-danger" href="/armas" role="button">listado de armas</a>
 <h1>BIENVENDIOS A UN BLOG ACERCA DE </h1>
     <img src="https://th.bing.com/th/id/R.bb38df3b51d4e54d00f7d789d1dbed3a?rik=qb07mNl2RUvhpg&pid=ImgRaw&r=0" class="img-fluid" alt="..." height="300" width="600">
 
@@ -23,6 +24,5 @@
        <li>
         Biografia: Hidetaka Miyazaki, nacido en Shizuoka, Prefectura de Shizuoka, Japón​ es un diseñador de videojuegos japonés y actual presidente de la compañía de videojuegos FromSoftware.2​ Miyazaki empezó a trabajar en FromSoftware como programador en el 2004, y después de trabajar en la saga Armored Core, se hizo conocido por crear la franquicia Souls. Aunque Miyazaki ha dirigido el primer y tercer videojuego de la serie, decidió tomar un papel menos activo en el desarrollo de Dark Souls II, supervisando el proyecto mientras Tomohiro Shibuya y Yui Tanimura se encargaron de la codirección.
        </li>   
-
 </div>
-{% endblock %}
+
