--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,26 @@
-{% extends 'layout.html'%} 
-    {% block titulo %} LOGIN {% endblock %}
-    {% block body %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login-agenda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
     <main class="d-flex">
         <div class="container-fluid row m-0 vh-100 justify-content-center align-items-center">
             <div class="card shadow w-50">
                 <div class="card-body">
                     <form action="/login" method="post">
-                        <h3 class="text-center"> BLOG DARK SOULS</h3>
+                        <h3 class="text-center"> INICIAR SESION DE VIAJERO</h3>
                         <h5 class="text-center">
-                            INGRESA
+                            <img src="https://th.bing.com/th/id/R.bb38df3b51d4e54d00f7d789d1dbed3a?rik=qb07mNl2RUvhpg&pid=ImgRaw&r=0" class="img-fluid" alt="..." height="300" width="600">
                         </h5>
-                        <label for="">Usuario</label>
+                        <label for="">email</label>
                         <input type="email" class="form-control mb-3" name="email">
-                        <label for="">Contraseña</label>
+                        <label for="">contraseña</label>
                         <input type="password" class="form-control mb-3" name="password">
-                        <button type="submit" class="btn btn-primary w-100">
-                          Ingresar  
-                        </button>
-
+                       
                         {% if message %}
 
                         <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -26,6 +29,10 @@
                         </div>
 
                         {% endif %}
+
+                        <button type="submit" class="btn btn-dark w-100">
+                          acceder  
+                        </button>
                     </form>
                 </div>
             </div>
@@ -33,6 +40,5 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
-  {% endblock %}
 </body>
 </html>
