--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,16 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login-agenda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/style.css">
 </head>
+<style>
+    body {
+      background-image: url("https://c.tenor.com/5YV6SYi1nLYAAAAd/left4dead-zombie.gif");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+</head>
+
 <body>
+    
+
     <main class="d-flex">
         <div class="container-fluid row m-0 vh-100 justify-content-center align-items-center">
             <div class="card shadow w-50">
                 <div class="card-body">
                     <form action="/login" method="post">
-                        <h3 class="text-center"> INICIAR SESION DE VIAJERO</h3>
+                        <h3 class="text-center"> INICIA SESION</h3>
                         <h5 class="text-center">
-                            <img src="https://th.bing.com/th/id/R.bb38df3b51d4e54d00f7d789d1dbed3a?rik=qb07mNl2RUvhpg&pid=ImgRaw&r=0" class="img-fluid" alt="..." height="300" width="600">
+                            <img src="https://th.bing.com/th/id/OIP.Lg7eHZJQ-R28V-szWFGApQHaCk?w=720&h=250&rs=1&pid=ImgDetMain" class="img-fluid" alt="..." height="200" width="400">
                         </h5>
                         <label for="">email</label>
                         <input type="email" class="form-control mb-3" name="email">
