--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="eS">
 <head>
@@ -8,30 +7,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
+    
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bolder" href="#">Blog de dark souls</a>
+            <a>Left 4 dead 2</a>
             <span>Bienvenido/a {{session['name']}}</a></span>
         </div>
-        <a class="btn btn-outline-danger" href="/" role="button">Salir</a>
-        <a class="btn btn-outline-danger" href="/inicio" role="button">Creador</a>
+        <a class="btn btn-outline-dark" href="/" role="button">Salir</a>
+        <a class="btn btn-outline-dark" href="/inicio" role="button">Creador</a>
     </nav>
 
     <div class="container">
        <div class="row">
                 <div class="col-12 text-center">
-                <img src="static/logo.jpg" class="mx-auto d-block" data-bs-toggle="modal" data-bs-target="#">
+               
                 
-            <h1 class="mt-4">Tipos de armas/magia en dark souls</h1>
-            <button type="button" class="btn btn-primary my-2" data-bs-toggle="modal" data-bs-target="#taskModal" data-taskid="0">Agregar arma o tipo de magia<i class="fas fa-plus"></i></button>
+            <h1 class="mt-4">LISTADO DE MODS</h1>
+            <button type="button" class="btn btn-primary my-2" data-bs-toggle="modal" data-bs-target="#taskModal" data-taskid="0">Agregar Mod<i class="fas fa-plus"></i></button>
             <table class="table table-bordered table-hover">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Nombre de arma</th>
+                        <th scope="col">Nombre del mod</th>
                         <th scope="col">Descripción</th>
+                        <th scope="col">link de steam</th>
+                        <th scope="col">configuracion</th>
+                        
                     </tr>
                 </thead>
                 
@@ -42,8 +46,9 @@
                         <th scope="row">{{ task[0] }}</th>
                         <td>{{ task[1] }}</td>
                         <td>{{ task[2] }}</td>
+                        <td>{{ task[3] }}</td>
                         <td>
-                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#taskModal" data-bs-id="{{task[0]}}" data-bs-nombre = "{{task[1]}}" data-bs-descripcion = "{{task[2]}}">Editar <i class="fas fa-edit"></i></button>
+                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#taskModal" data-bs-id="{{task[0]}}" data-bs-nombre = "{{task[1]}}" data-bs-descripcion = "{{task[3]}}">Editar <i class="fas fa-edit"></i></button>
                             <form action="/delete_task" method="post" id="deleteTaskForm">
                                 <input type="hidden" name="task_id" id="deleteTaskId" value="{{task[0]}}">
                                 <button type="submit" class="btn btn-danger">Eliminar <i class="fas fa-trash-alt"></i></button>
@@ -62,7 +67,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="taskModalLabel">Agregar tarea</h5>
+                    <h5 class="modal-title" id="taskModalLabel">Agregar Mod</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     </button>
                 </div>
@@ -77,6 +82,10 @@
                             <label for="descripcion">Descripción:</label>
                             <input type="text" class="form-control" id="descripcion" name="descripcion" required>
                         </div>
+                        <div class="form-group">
+                            <label for="descripcion">Link:</label>
+                            <input type="text" class="form-control" id="link" name="link" required>
+                        </div>
                         <div class="form-group text-center mt-2">
                             <button type="submit" class="btn btn-primary">Guardar</button>
                         </div>
@@ -87,7 +96,12 @@
     </div>
     <a>
     </div>
+    <div class="container">
+        <img src="static/tank.jpg" alt="A historical photograph">
+      </div>
+      
 </body>
+
 
  <script>
        
@@ -100,19 +114,22 @@ if (nombreModal) {
     const id = button.getAttribute('data-bs-id')
     const name = button.getAttribute('data-bs-nombre')
     const desc = button.getAttribute('data-bs-descripcion')
+    const link = button.getAttribute('data-bs-link')
     // If necessary, you could initiate an Ajax request here
     // and then do the updating in a callback.
 
     // Update the modal's content.
     const modalNombre = nombreModal.querySelector('#nombre')
     const modalDesc = nombreModal.querySelector('#descripcion')
+
+    const modalink = nombreModal.querySelector('#link')
   //  const modalBodyInput = exampleModal.querySelector('.modal-body input')
 
     //modal.textContent = `New message to ${recipient}`
     modalNombre.value = name
     modalDesc.value = desc
     if(id){
-        nombreModal.querySelector('.modal-title').textContent = 'Editar tarea';
+        nombreModal.querySelector('.modal-title').textContent = 'Editar Mod';
         nombreModal.querySelector('#taskForm').setAttribute('action', '{{ url_for("edit_task", id=0) }}'.replace('0', id));
     }else {
         nombreModal.querySelector('.modal-title').textContent = 'Agregar tarea';
